--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -29,6 +29,7 @@
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                     <div *ngIf="f.password.errors.required">Password is required</div>
                     <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                    <div *ngIf="f.password.errors.passwordRequirements">Password must contain at least one uppercase letter, one lowercase letter, one digit, and one special character.</div>
                 </div>
             </div>
             <div>
